--- a/GeneralUtility/App.xaml
+++ b/GeneralUtility/App.xaml
@@ -1,9 +1,21 @@
 ﻿<Application x:Class="GeneralUtility.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+               xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:GeneralUtility"
-             StartupUri="MainWindow.xaml">
+             StartupUri="MainWindow.xaml"
+           mc:Ignorable="d">
+    
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <!-- some other resources -->
+
+                <!-- your custom icon resource -->
+                <ResourceDictionary Source="StyleDictionary.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+
     </Application.Resources>
 </Application>
